# jreport

./: .gitignore  CMakeLists.txt  architecture.md  clusters.json  commands.sql  confluence.py  database_init.json  docker-compose.yml  export.sh  export_products.cpp  fix_product.cpp  fix_product.sh  initiatives.json  jira.py  job.py  key.pem  main.cpp  main_hrefs.cpp  main_poco.cpp  out.json  products.json  readme.md  rootcert.pem  start.sh  xlsx_export.cpp
config/: config.cpp  config.h
database/: cache.cpp  cache.h  database.cpp  database.h
file_export/: confluence_export.cpp  confluence_export.h  reports.cpp  reports.h  xls_export.cpp  xls_export.h
loader/: index.yml  jira_loader.cpp  jira_loader.h  stubs.md  url_downloader.cpp  url_downloader.h
model/: cluster.cpp  cluster.h  cluster_initiative_issue.cpp  cluster_initiative_issue.h  cluster_project.cpp  cluster_project.h  comment.cpp  comment.h  hrefs.cpp  hrefs.h  initiative.cpp  initiative.h  issue.cpp  issue.h  product.cpp  product.h  product_initiative_issue.cpp  product_initiative_issue.h  product_project.cpp  product_project.h
mysql/: Dockerfile
robot/: Dockerfile
stubs/: 589825.json  CCPP-2190.json  CCPP-2206.json  CLMRKT-1.json  CLMRKT-100.json  CLMRKT-54.json  CLMRKT-621.json  CLMRKT-622.json  CLMRKT-623.json  CLMRKT-624.json  CLMRKT-658.json  CLMRKT-68.json  CLMRKT-69.json  CLMRKT-70.json  KA-1395.json  KA-1395_2.json  KA-1396.json  KA-1397.json  MDP-1221.json  MDP-1225.json
web_server/: clusters.h  comments.h  http_request_factory.h  http_web_server.h  initiatives.h  product_initiative_issue.h  product_project.h
